remove usages of old cluster api