@@ -20,13 +20,11 @@ import eu.cloudnetservice.cloudnet.common.document.gson.JsonDocument;
 import eu.cloudnetservice.cloudnet.driver.network.cluster.NetworkClusterNode;
 import eu.cloudnetservice.cloudnet.driver.network.http.HttpContext;
 import eu.cloudnetservice.cloudnet.driver.network.http.HttpResponseCode;
-import eu.cloudnetservice.cloudnet.node.CloudNet;
-import eu.cloudnetservice.cloudnet.node.cluster.ClusterNodeServerProvider;
 import eu.cloudnetservice.cloudnet.node.cluster.NodeServer;
+import eu.cloudnetservice.cloudnet.node.cluster.NodeServerProvider;
+import eu.cloudnetservice.cloudnet.node.cluster.defaults.LocalNodeServer;
 import eu.cloudnetservice.cloudnet.node.http.HttpSession;
 import eu.cloudnetservice.cloudnet.node.http.V2HttpHandler;
-import java.util.Collection;
-import java.util.stream.Collectors;
 import lombok.NonNull;
 
 public class V2HttpHandlerCluster extends V2HttpHandler {
@@ -63,7 +61,7 @@ public class V2HttpHandlerCluster extends V2HttpHandler {
   }
 
   protected void handleNodeRequest(HttpContext context) {
-    var server = this.getNodeServer(context, true);
+    var server = this.getNodeServer(context);
     if (server != null) {
       this.ok(context)
         .body(this.success().append("node", this.createNodeInfoDocument(server)).toString())
@@ -80,11 +78,9 @@ public class V2HttpHandlerCluster extends V2HttpHandler {
   }
 
   protected void handleNodeListRequest(HttpContext context) {
-    Collection<JsonDocument> nodes = this.nodeProvider().nodeServers().stream()
+    var nodes = this.nodeProvider().nodeServers().stream()
       .map(this::createNodeInfoDocument)
-      .collect(Collectors.toList());
-    // add the local node info
-    nodes.add(this.createNodeInfoDocument(this.nodeProvider().selfNode()));
+      .toList();
 
     this.ok(context)
       .body(this.success().append("nodes", nodes).toString())
@@ -94,7 +90,7 @@ public class V2HttpHandlerCluster extends V2HttpHandler {
   }
 
   protected void handleNodeCommandRequest(HttpContext context) {
-    var nodeServer = this.getNodeServer(context, true);
+    var nodeServer = this.getNodeServer(context);
     var commandLine = this.body(context.request()).getString("command");
     if (commandLine == null || nodeServer == null) {
       this.badRequest(context)
@@ -125,7 +121,7 @@ public class V2HttpHandlerCluster extends V2HttpHandler {
       return;
     }
 
-    if (this.getNodeServer(server.uniqueId(), true) != null) {
+    if (this.nodeProvider().node(server.uniqueId()) != null) {
       this.badRequest(context)
         .body(this.failure().append("reason", "The node server is already registered").toString())
         .context()
@@ -138,7 +134,7 @@ public class V2HttpHandlerCluster extends V2HttpHandler {
     configuration.clusterConfig().nodes().add(server);
     configuration.save();
 
-    this.nodeProvider().clusterServers(configuration.clusterConfig());
+    this.nodeProvider().registerNodes(configuration.clusterConfig());
 
     this.response(context, HttpResponseCode.CREATED)
       .body(this.success().toString())
@@ -162,7 +158,7 @@ public class V2HttpHandlerCluster extends V2HttpHandler {
       node -> node.uniqueId().equals(uniqueId));
     if (removed) {
       this.configuration().save();
-      this.nodeProvider().clusterServers(this.configuration().clusterConfig());
+      this.nodeProvider().registerNodes(this.configuration().clusterConfig());
 
       this.response(context, HttpResponseCode.OK)
         .body(this.success().toString())
@@ -201,10 +197,11 @@ public class V2HttpHandlerCluster extends V2HttpHandler {
         .closeAfter(true)
         .cancelNext();
     } else {
-      //TODO: registered.setListeners(server.getListeners());
-      registered.properties().append(server.properties());
+      this.configuration().clusterConfig().nodes().remove(registered);
+      this.configuration().clusterConfig().nodes().add(server);
+
       this.configuration().save();
-      this.nodeProvider().clusterServers(this.configuration().clusterConfig());
+      this.nodeProvider().registerNodes(this.configuration().clusterConfig());
 
       this.ok(context)
         .body(this.success().toString())
@@ -215,26 +212,19 @@ public class V2HttpHandlerCluster extends V2HttpHandler {
   }
 
   protected JsonDocument createNodeInfoDocument(NodeServer node) {
-    return JsonDocument.newDocument("node", node.nodeInfo())
-      .append("available", node.available())
-      .append("head", node.headNode())
+    return JsonDocument.newDocument("node", node.info())
+      .append("state", node.state())
+      .append("head", node.head())
+      .append("local", node instanceof LocalNodeServer)
       .append("nodeInfoSnapshot", node.nodeInfoSnapshot());
   }
 
-  protected NodeServer getNodeServer(HttpContext context, boolean includeLocal) {
+  protected NodeServer getNodeServer(HttpContext context) {
     var nodeName = context.request().pathParameters().get("node");
-    return nodeName == null ? null : this.getNodeServer(nodeName, includeLocal);
+    return this.nodeProvider().node(nodeName);
   }
 
-  protected NodeServer getNodeServer(String nodeName, boolean includeLocal) {
-    NodeServer server = this.nodeProvider().nodeServer(nodeName);
-    if (server == null && includeLocal && nodeName.equals(CloudNet.instance().componentName())) {
-      server = this.nodeProvider().selfNode();
-    }
-    return server;
-  }
-
-  protected ClusterNodeServerProvider nodeProvider() {
+  protected @NonNull NodeServerProvider nodeProvider() {
     return this.node().nodeServerProvider();
   }
 }
